--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
 	"description": "A simple, node.js-like require() for the browser.",
 	"version": "0.1.0",
 	"author": "popeindustries <alex@pope-industries.com>",
-	"keywords": ["javascript"],
-	"dependencies": {
-	},
+	"keywords": ["javascript", "modules"],
+	"dependencies": {},
 	"main": "./require.js",
 	"repository": {
 		"type": "git",
 		"url": "git://github.com/popeindustries/browser-require.git"
 	},
-	"readme": "./README.md",
-	"_id": "browser-require@0.1.0",
-	"_from": "browser-require@~0.1"
+	"readmefile": "README.md",
+	"readme": "A simple, node.js-like require() for the browser."
 }
