--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "simple-browser-require",
 	"description": "A simple, node.js-like require() for the browser.",
-	"version": "0.1.7",
+	"version": "0.2.0",
 	"author": "popeindustries <alex@pope-industries.com>",
 	"keywords": ["javascript", "modules", "require"],
 	"dependencies": {},
@@ -13,10 +13,8 @@
 	"scripts": {
 		"test": "mocha --reporter spec --require should"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/popeindustries/browser-require.git"
-	},
+	"repository": "git://github.com/popeindustries/browser-require.git",
 	"readmefile": "README.md",
-	"readme": "A simple, node.js-like require() for the browser."
+	"readme": "A simple, node.js-like require() for the browser.",
+	"license": "MIT"
 }
